src/pages/app/Project/styles.scss
@import '../../../styles/colors';
@import '../../../styles/extension';

.Project {
  width: 100%;
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;

  &::-webkit-scrollbar {
    width: 16px;
  }

  &::-webkit-scrollbar-button {
    display: none;
  }

  &::-webkit-scrollbar-thumb { // bar
    border: 3px solid $primary-surface;
    border-radius: 25px;
    background-color: $elevation-24;
  }

  &::-webkit-scrollbar-track-piece { // background
    background-color: $primary-surface;
  }

  .defaults {
    width: 95%;
    margin: 3% 2% 2% 2%;
    border-radius: 8px;
    background-color: $elevation-01;
  }

  h2 {
    @extend .defaults;
    padding: .2em .5em;
  }

  p {
    @extend .defaults;
    padding: .5em 1em;
  }

  .Task {
    @extend .defaults;
  }
}

